--- a/app/components/VideoPlayer.css
+++ b/app/components/VideoPlayer.css
@@ -76,7 +76,7 @@
   position: relative;
   background-color: #421400;
   /* background-color: rgba(255, 80, 6, 0.4); */
-  height: 24px;
+  height: 32px;
   margin-bottom: 8px;
 }
 
@@ -84,19 +84,20 @@
   width: 100%;
   position: relative;
   background-color: #421400;
-  height: 16px;
+  height: 8px;
 }
 
 .timelineCutSelection {
   position: absolute;
   background-color: rgba(255, 80, 6, 0.4);
-  height: 24px;
+  height: 32px;
+  cursor: col-resize;
 }
 
 .timelineCut {
   position: absolute;
   background-color: rgba(255, 80, 6, 0.4);
-  height: 16px;
+  height: 8px;
 }
 
 .buttonWrapper {
@@ -122,7 +123,7 @@
   /* top: 0; */
   width: 2px;
   background-color: rgba(255, 80, 6, 1);
-  height: 20px;
+  height: 28px;
   margin-top: 2px;
 }
 
@@ -132,8 +133,8 @@
   /* top: 0; */
   width: 2px;
   background-color: rgba(255, 80, 6, 1);
-  height: 12px;
-  margin-top: 2px;
+  height: 8px;
+  margin-top: 0px;
 }
 
 .timelineWrapper .currentTime {
